--- a/src/index.css
+++ b/src/index.css
@@ -75,404 +75,400 @@
 }
 
 
-  header {
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--Backgtound-fundo-Color);
-    transition: all 300ms;
-  }
+header {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--Backgtound-fundo-Color);
+  transition: all 300ms;
+}
   
-  .Barra_top {
-    height: 5rem;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+.Barra_top {
+  height: 5rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  #Portifolio {
-    margin: 2rem;
-    font-size: clamp(2.5rem, 5vw, 10px);
-    font-weight: 900;
-    color: var(--Color-texte-portifolio);
-    transition: all 300ms;
-  }
+#Portifolio {
+  margin: 2rem;
+  font-size: clamp(3rem, 10vw, 1.5rem);
+  font-weight: 900;
+  color: var(--Color-texte-portifolio);
+  transition: all 300ms;
+}
 
-  .Botao_Modo button {
-    font-size: 17px;
-    color: var(--Color-button-Light-Dark);
-    transition: all 300ms;
-  }
+.Botao_Modo button {
+  font-size: 17px;
+  color: var(--Color-button-Light-Dark);
+  transition: all 300ms;
+}
 
-  .Container-Buttons {
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    gap: clamp(1rem, 3vw, 2rem);
-    width: auto;   
-    margin: 2rem;
-    display: flex;
-  }
+.Container-Buttons {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  gap: clamp(1rem, 3vw, 2rem);
+  width: auto;   
+  margin: 2rem;
+  display: flex;
+}
 
-  .lingua {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    gap: 1rem;
-  }
+.lingua {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  gap: 1rem;
+}
   
-  .lingua button {
-    font-size: 15px;
-    font-weight: bold;
-    color: var(--Color-buttom-br-en);
-    transition: all 300ms;
-  }
+.lingua button {
+  font-size: 15px;
+  font-weight: bold;
+  color: var(--Color-buttom-br-en);
+  transition: all 300ms;
+}
 
-  .Narve {
-    height: 5rem;
-    margin: 0rem 2rem;
-    display: flex;
-    border-radius: 50px;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--Backgtound-color-nav);
-    transition: all 300ms;
-  }
+.Narve {
+  height: 5rem;
+  margin: 0rem 2rem;
+  display: flex;
+  border-radius: 50px;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--Backgtound-color-nav);
+  transition: all 300ms;
+}
   
-  .Narve a {
-    text-decoration: none;
-    color: var(--Color-nav-a);
-    font-weight: 900;
-    font-size: clamp(14px, 3vw, 24px); 
-    animation: reverse all 1000ms;
-    transition: all 300ms;
-  }
+.Narve a {
+  text-decoration: none;
+  color: var(--Color-nav-a);
+  font-weight: 900;
+  font-size: clamp(14px, 3vw, 24px); 
+  animation: reverse all 1000ms;
+  transition: all 300ms;
+}
 
-  .Narve a:hover {
-    color: var(--Color-nav-a-houve);
-    animation: reverse all 1000ms;
-  }
+.Narve a:hover {
+  color: var(--Color-nav-a-houve);
+  animation: reverse all 1000ms;
+}
 
-  .Painel-1 { 
-    height: 100%;
-    display: flex;
-    box-sizing: border-box;
-  } 
+.Painel-1 { 
+  height: 100%;
+  display: flex;
+  box-sizing: border-box;
+} 
   
-  .Painel-Perso {
-    width: 100%;
-    margin: 4rem;
-    display: flex;
-    gap: 0.5rem;
-  }
+.Painel-Perso {
+  width: 100%;
+  margin: 4rem;
+  display: flex;
+  gap: 0.5rem;
+}
 
-  .Painel-img-redes {
-    height: auto;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
+.Painel-img-rede {
+  height: 100%;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: space-around;
+}
    
-  .Painel-img-redes {
-    height: 100%;
-    width: 45%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5rem;
-  }
-
-  #Imagem-User{
-    width: auto;
-    border-radius: 5%;
-    display: flex;
-    object-fit: cover;
-  }
-
-  #Animetion-text {
-    margin: 1rem 0rem;
-    font-size: clamp(2.2rem, 5vw, 5rem);
-    font-weight: 900;
-    color: var(--Color-Texto-pequeno);
-    transition: all 300ms;
-  }
-
-  #Animetion-text:after {
-    content: '|';
-    margin-left: 8px;
-    opacity: 1;
-    animation: pisca .7s infinite;
-   }
-
-   @keyframes pisca{
-    0%, 100%{
-        opacity: 1;
-    }
-    50%{
-        opacity: 0;
-    }
+#Imagem-User{
+  width: auto;
+  border-radius: 5%;
+  display: flex;
+  object-fit: cover;
 }
-.Discrição-Perso {
-    max-width: 80%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: 1rem 1.5rem;
+
+#Animetion-text {
+  margin: 1rem 0rem;
+  font-size: clamp(1.5rem, 5vw, 5rem);
+  font-weight: 900;
+  color: var(--Color-Texto-pequeno);
+  transition: all 300ms;
 }
-  #Email {
-    font-size: 20px;
-    color : var(--Color-Texto-pequeno);
-    transition: all 300ms;
-  } 
-  
-  #Founder {
-    font-weight: 800; 
-    font-size: clamp(1.5rem, 3vw, 1.8rem);
-    color: var(--Color-Texto-pequeno);
-    transition: all 300ms;
-  }
-  
-  #Texto-mini {
-    height: 70px;
-    display: flex;
-    margin: 1.5rem 0rem;
-    align-items: center;
-    font-size: clamp(1rem, 2.5vw, 1.6rem);
-    color: var(--Color-Texto-pequeno);
-    border-right: solid 5px var(--Color-Texto-pequeno);
-    transition: all 300ms;
-  }
-  
-  .Social-Midias {
-    height: 35%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: start;
-    align-items: start;
-  }
 
-  .CircularText {
-    width: 100%;
-    height: 75%;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-  }
+#Animetion-text:after {
+  content: '|';
+  margin-left: 8px;
+  opacity: 1;
+  animation: pisca .7s infinite;
+}
+
+@keyframes pisca{
+0%, 100% {
+  opacity: 1;
+}
+50% {
+   opacity: 0;
+}
+}
+
+.Container-discrition {
+  height: 100%;
+  max-width: 75%;
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 1rem;
+}
+
+#Email {
+  font-size: 20px;
+  color : var(--Color-Texto-pequeno);
+  transition: all 300ms;
+} 
   
-  .Social-Midias a {
-    height: clamp(60px, 10vw, 75px); 
-    font-size: clamp(1rem, 3vw, 1.1rem); 
-    width: 100%;
-    display: flex;
-    background-color: var(--Backgtound-cards-icons);
-    align-items: center;
-    gap: 0.5rem;
-    border-radius: 10px;
-    text-decoration: none;
-    font-weight: 700;
-    color: var(--Backgtound-a-Icons);
-    transition: all 300ms;
-  }
+#Founder {
+  font-weight: 800; 
+  font-size: clamp(1.5rem, 3vw, 1.8rem);
+  color: var(--Color-Texto-pequeno);
+  transition: all 300ms;
+}
+  
+#Texto-mini {
+  height: auto;
+  width: 100%;
+  display: flex;
+  margin: 1.5rem 0rem;
+  align-items: center;
+  font-size: clamp(1rem, 2.5vw, 1.7rem);
+  color: var(--Color-Texto-pequeno);
+  border-right: solid 5px var(--Color-Texto-pequeno);
+  transition: all 300ms;
+}
+  
+.Social-Midias {
+  height: 35%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: start;
+  align-items: start;
+}
 
-  .Social-Midias a:hover {
-    background-color: var(--Backgtound-cards-icons-houver);
-    transition: all 1000ms;
-  }
+.CircularText {
+  width: 100%;
+  height: 75%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+  
+.Social-Midias a {
+  height: clamp(60px, 10vw, 75px); 
+  font-size: clamp(1rem, 3vw, 1.1rem); 
+  width: 100%;
+  display: flex;
+  background-color: var(--Backgtound-cards-icons);
+  align-items: center;
+  gap: 0.5rem;
+  border-radius: 10px;
+  text-decoration: none;
+  font-weight: 700;
+  color: var(--Backgtound-a-Icons);
+  transition: all 300ms;
+}
 
-  .Social-Midias i {
-    font-size: clamp(1.2rem, 3vw, 1.3rem); 
-    font-weight: 900;
-    color: var(--Color-icons-redes);
-    margin-left: 1rem;
-    transition: all 300ms;
-  }
+.Social-Midias a:hover {
+  background-color: var(--Backgtound-cards-icons-houver);
+  transition: all 1000ms;
+}
+
+.Social-Midias i {
+  font-size: clamp(1.2rem, 3vw, 1.3rem); 
+  font-weight: 900;
+  color: var(--Color-icons-redes);
+  margin-left: 1rem;
+  transition: all 300ms;
+}
 
 @media (max-width: 480px) {
+.Painel-img-rede {
+  height: auto;
+  width: 100%;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 
-    .Barra_top {
-      display: flex;
-      padding: 0.5rem;
-    }
+.Container-discrition {
+  width: 100%;
+  max-width: 90%;
+  margin: 0rem 0.5rem;
+  align-items: center;
+}
 
-    #Portifolio {
-      font-size: 1rem;
-      margin: 0.5rem;
-    } 
+.Barra_top {
+  display: flex;
+  padding: 0.5rem;
+}
 
-    .Container-Buttons {
-      display: flex;
-      gap: 0.8rem,;
-    }
+#Portifolio {
+  font-size: 1.7rem;
+  margin: 0.5rem;
+}
 
-    .Botao_Modo {
-      display: flex;
-      justify-content: center;
-      margin: 0rem 1.5rem;
-    }
+.Container-Buttons {
+  display: flex;
+  gap: 0.8rem,;
+}
 
-    .Narve {
-      display: none;
-    }
+.Botao_Modo {
+  display: flex;
+  justify-content: center;
+  margin: 0rem 1.5rem;
+}
 
-    .Painel-Perso {
-      height: 100%; 
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      margin: 0.5rem;
-    }
-    
-    .Painel-img-redes {
-      height: 30%;
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.8rem;
-    }
+.Narve {
+  display: none;
+}
 
-    .Conteiner-Image {
-      height: 100%;
-      width: 15%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+.Painel-Perso {
+  height: 100%; 
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem;
+}
 
-    .Imagem-Perso {
-      height: 100%;
-      width: 100%;
-      display: flex;
-    }
+.Conteiner-Image {
+  height: 100%;
+  width: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-    #Imagem-User {
-      height: 225px;
-      width: 210px;
-      border-radius: 10%;
-    }
+.Imagem-Perso {
+  height: 100%;
+  width: 100%;
+  display: flex;
+}
 
-    .Social-Midias {
-      height: auto;
-      width: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+#Imagem-User {
+  height: 225px;
+  width: 210px;
+  border-radius: 10%;
+}
 
-    .Container-discrição {
-      height: 100%;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
+.Social-Midias {
+  height: auto;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-    .Animetion-text {
-      font-size: 1rem;
-      margin: 0.5rem 0rem;
-    }
 
-    #Founder{
-      font-size: 1.2rem;
-      margin: 0.5rem 0rem;
-    }
+#Texto-mini {
+  height: auto;
+  width: 100%;
+  display: flex;
+  margin: 0.5rem 0rem;
+  align-items: center;
+}
 
-    #Email {
-      font-size: 1.2rem;
-      margin: 0.5rem 0rem;
-    }
+#Founder{
+  font-size: 1.2rem;
+  margin: 0.5rem 0rem;
+}
 
-    #Pequeno-Texto {
-      font-size: 1.5rem;
-      margin: 0.5rem 0rem;
-    }
+#Email {
+  font-size: 1.2rem;
+  margin: 0.5rem 0rem;
+}
 
-    .Discrição-Perso {
-      font-size: 1.2rem;
-      margin: 0.5rem;
-      display: flex;
-      flex-wrap: wrap-reverse;
-    }
+#Pequeno-Texto {
+  font-size: 1.5rem;
+  margin: 0.5rem 0rem;
+}
 
-    .Social-Midias {
-      margin-right: 1rem;
-    }
+.Discrição-Perso {
+  font-size: 1.2rem;
+  margin: 0.5rem;
+  display: flex;
+  flex-wrap: wrap-reverse;
+}
 
-    .Imagem-Perso {
-      height: 4rem;
-      width: 70%;
-      margin: 3 auto; 
-    }
+.Social-Midias {
+  margin-right: 1rem;
+}
 
-    #Imagem-User {
-      max-width: 65%; 
-      height: auto; 
-    }
+.Imagem-Perso {
+  height: 4rem;
+  width: 70%;
+  margin: 3 auto; 
+}
+
+#Imagem-User {
+  max-width: 65%; 
+  height: auto; 
+}
    
   }
 
 
-  @media (max-width: 768px) {
-    .Imagem-Perso {
-      width: 70%; 
-    }
+ @media (max-width: 768px) {
 
-    #Imagem-User {
-      max-width: 80%; 
-    }
+.Imagem-Perso {
+   width: 70%; 
+}
 
-    .Top-barra {
-      flex-direction: column;
-      height: auto; 
-    }
-  
-    .div_buttons {
-      width: 100%;
-      flex-direction: column;
-      margin: 1rem;
-    }
-  
-    .Painel-1 {
-      flex-direction: column;
-    }
-  
-    .Discrição-Perso, .Imagem-Perso {
-      width: 100%;
-    }
+#Imagem-User {
+  max-width: 80%; 
 
-    #Pequeno-Texto {
-      font-size: 0.9rem; 
-    }
-  
-    #Name-Perso, #Portifolio {
-      font-size: 40px;
-    }
-  
-    .Narve {
-      margin: 0 1rem;
-    }
-  }
+.Top-barra {
+  flex-direction: column;
+  height: auto; 
+}
 
+.div_buttons {
+  width: 100%;
+  flex-direction: column;
+  margin: 1rem;
+}
 
-  @media (max-width: 1024px) {
-    .Imagem-Perso {
-      width: 60%; 
-    }
+.Painel-1 {
+  flex-direction: column;
+}
+
+.Discrição-Perso, .Imagem-Perso {
+  width: 100%;
+}
+
+#Pequeno-Texto {
+  font-size: 0.9rem; 
+}
+
+#Name-Perso, #Portifolio {
+  font-size: 40px;
+}
+
+.Narve {
+  margin: 0 1rem;
+}
+}
+
+ @media (max-width: 1024px) {
+.Imagem-Perso {
+  width: 60%; 
+}
   
-    .Painel-1 {
-      flex-direction: column; 
-    }
-  
-    .Discrição-Perso {
-      width: 100%;
-    }
-  
-    .Imagem-Perso {
-      width: 100%;
-    }
-  }
+.Painel-1 {
+  flex-direction: column; 
+}
+
+.Discrição-Perso {
+  width: 100%;
+}
+
+.Imagem-Perso {
+  width: 100%;
+
+}
+}}
