--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,7 @@
 
 
 header {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -131,10 +131,10 @@ header {
 }
 
 .Narve {
-  height: 5rem;
-  margin: 0rem 2rem;
+  height: 4rem;
+  margin: 0rem 25rem;
   display: flex;
-  border-radius: 50px;
+  border-radius: 15px;
   justify-content: space-around;
   align-items: center;
   background-color: var(--Backgtound-color-nav);
@@ -144,8 +144,8 @@ header {
 .Narve a {
   text-decoration: none;
   color: var(--Color-nav-a);
-  font-weight: 900;
-  font-size: clamp(14px, 3vw, 24px); 
+  font-weight: 700;
+  font-size: clamp(10px, 3vw, 20px); 
   animation: reverse all 1000ms;
   transition: all 300ms;
 }
@@ -162,31 +162,39 @@ header {
 } 
   
 .Painel-Perso {
+  height: 100%;
   width: 100%;
   margin: 4rem;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   gap: 0.5rem;
 }
 
-.Painel-img-rede {
-  height: 100%;
-  width: 25%;
+.Container-Image {
+  height: 13%;
+  width: 100%;
+  left: 0;
+  top: 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   gap: 1rem;
   justify-content: space-around;
 }
    
 #Imagem-User {
-  width: auto;
-  border-radius: 5%;
+  width: 12%;
+  border-radius: 50%;
   display: flex;
   object-fit: cover;
 }
 
 #Animetion-text {
-  margin: 1rem 0rem;
-  font-size: clamp(1.7rem, 5vw, 5rem);
+  text-align: center;
+  margin: 2rem 0rem;
+  font-size: clamp(1.7rem, 5vw, 8rem);
   font-weight: 900;
   color: var(--Color-Texto-pequeno);
   transition: all 300ms;
@@ -209,82 +217,43 @@ header {
 }
 
 .Container-discrition {
-  height: 100%;
-  max-width: 75%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   margin: 1rem 1rem;
 }
 
-#Email {
-  font-size: 20px;
-  color : var(--Color-Texto-pequeno);
-  transition: all 300ms;
-} 
-  
-#Founder {
-  font-weight: 800; 
-  font-size: clamp(1.5rem, 3vw, 1.8rem);
-  color: var(--Color-Texto-pequeno);
-  transition: all 300ms;
+.painel-textos {
+  height: 20%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-  
+
 #Texto-mini {
   height: auto;
   width: 100%;
   display: flex;
-  margin: 1.5rem 0rem;
   align-items: center;
-  font-size: clamp(1.1rem, 2.5vw, 1.7rem);
+  margin: 2rem 3rem;
+  text-align: center;
+  font-size: clamp(1.1rem, 2.5vw, 2rem);
   color: var(--Color-Texto-pequeno);
   border-right: solid 5px var(--Color-Texto-pequeno);
+  border-left: solid 5px var(--Color-Texto-pequeno);
   transition: all 300ms;
 }
   
 .Social-Midias {
-  height: 35%;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   justify-content: start;
   align-items: start;
-}
-
-.CircularText {
-  width: 100%;
-  height: 75%;
-  display: flex;
-  justify-content: end;
-  align-items: center;
-}
-  
-.Social-Midias a {
-  height: clamp(45px, 10vw, 75px); 
-  font-size: clamp(0.9rem, 3vw, 1.1rem); 
-  width: 100%;
-  display: flex;
-  background-color: var(--Backgtound-cards-icons);
-  align-items: center;
-  gap: 0.5rem;
-  border-radius: 10px;
-  text-decoration: none;
-  font-weight: 700;
-  color: var(--Backgtound-a-Icons);
-  transition: all 300ms;
-}
-
-.Social-Midias a:hover {
-  background-color: var(--Backgtound-cards-icons-houver);
-  transition: all 1000ms;
-}
-
-.Social-Midias i {
-  font-size: clamp(1rem, 3vw, 1.3rem); 
-  font-weight: 900;
-  color: var(--Color-icons-redes);
-  margin-left: 1rem;
-  transition: all 300ms;
 }
 
 @media (max-width: 480px) {
@@ -338,7 +307,7 @@ header {
 }
 
 .Nav_animetion nav a {
-  font-size: 1.4rem;
+  font-size: calc(0.8rem , 0.1vw);
   text-decoration: none;
   margin: 0.5rem;
   transition: all 300ms;
