--- a/src/index.css
+++ b/src/index.css
@@ -76,17 +76,16 @@
 
 
 header {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   background-color: var(--Backgtound-fundo-Color);
   transition: all 300ms;
-    background: var(--Backgtound-fundo-Color);
+   background: var(--Backgtound-fundo-Color);
   --gap: 5em;
   --line: 1px;
   --color: rgba(94, 94, 94, 0.2);
-
   background-image: linear-gradient(
       -90deg,
       transparent calc(var(--gap) - var(--line)),
@@ -100,6 +99,7 @@ header {
       var(--color) var(--gap)
     );
   background-size: var(--gap) var(--gap);
+  
 }
   
 .Barra_top {
@@ -184,18 +184,26 @@ header {
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   margin: 2rem;
 }
 
-
 .Portfólio {
   font-size: clamp(18rem, 3vw, 2rem);
   font-weight: 900;
-  margin: 12rem;
+  margin: 1rem;
   text-align: center;
   color: var(--Color-texte-portifolio);
   transition: all 300ms;
+}
+
+.Container-Text {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
   
 .Painel-Perso {
