--- a/src/hooks/Card/style.css
+++ b/src/hooks/Card/style.css
@@ -19,8 +19,8 @@
   height: 100%;
   width: 100%;
   display: flex;
-  align-content: center;
-  justify-content: center;
+  align-content: end;
+  justify-content: end;
 }
 
 .container-4 {
@@ -45,13 +45,13 @@
   display: flex;
   background-color: var(--Color-Card-Background);
   border-radius: 10px;
-  padding: 4rem 0rem;
+  padding: 4rem 4rem;
   box-shadow: var(--Box-Shadow);
 }
 
 .timeline_item .timeline_left {
   height: 100%;
-  width: 50%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -59,24 +59,59 @@
 }
 
 .timeline_item h2 {
-  font-size: clamp(2rem, 3vw, 3rem);
+  font-size: clamp(2rem, 3vw, 3.5rem);
   font-weight: 900;
   color: var(--Color-Texto-pequeno);
   text-align: center;
 }
 
 .timeline_item .timeline_centre {
-  width: 20%;
+  width: 15%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-
 .timeline_item .timeline_right {
-  width: 50%;
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.timeline_item .timeline_right p {
+  font-size: clamp(1.5rem, 2vw, 1.8rem);
+  font-weight: 400;
+  margin: 4rem 0;
+  color: var(--Color-Texto-pequeno);
+}
+
+.timeline_item .timeline_right p span {
+  font-weight: 900;
+  color: var(--Color-Texto-pequeno);
+}
+
+.timeline_item .timeline_right img {
+  width: 100%;
+  max-width: 1000px;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: var(--Box-Shadow);
+}
+
+.timeline_item .timeline_left img:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease-in-out;
+}
+
+.timeline_item .timeline_right .timeline_right_text {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
+
+
